Added sort-suffix and sort-suffix-marker